Fully working image build